# spirvcruncher

./: CMakeLists.txt  CMakePresets.json  README.md  embed_shadercode.cmake
data/: smolv_template.cpp  smolv_template.h  spirvcruncher_template.h
src/: spirvcruncher.cpp
